--- a/Gulp/gulpt/sass/style.scss
+++ b/Gulp/gulpt/sass/style.scss
@@ -1,6 +1,3 @@
-h1 {
-  color: red;
-  &:hover {
-    color: blue;
-  }
-}
+@import "component/variables.scss";
+@import "component/layout.scss";
+@import "component/base.scss";
